--- a/mod_jk.conf
+++ b/mod_jk.conf
@@ -1,5 +1,5 @@
 #setup the workers.properties file path, default prefix path is httpd's home (/usr/local/httpd)
-JkWorkersFile /usr/httpd/conf.d/workers.properties
+JkWorkersFile /etc/httpd/conf.d/workers.properties
 JkLogFile  /var/log/jk.log
 JkShmFile  /var/log/jk-runtime-status
 JkLogLevel error
