--- a/mod_jk.conf
+++ b/mod_jk.conf
@@ -1,4 +1,5 @@
 #setup the workers.properties file path, default prefix path is httpd's home (/usr/local/httpd)
+LoadModule jk_module modules/mod_jk.so
 JkWorkersFile /etc/httpd/conf.d/workers.properties
 JkLogFile  /var/log/jk.log
 JkShmFile  /var/log/jk-runtime-status
