--- a/server.cnf
+++ b/server.cnf
@@ -28,7 +28,8 @@ skip_name_resolve
 
 [galera]
 wsrep_provider                 = /usr/lib64/galera/libgalera_smm.so
-wsrep_sst_method               = rsync
+wsrep_sst_method               = xtrabackup-v2
+wsrep_sst_auth                 = sstuser:sstpass
 wsrep_slave_threads            = 4
 innodb-flush-log-at-trx-commit = 2
 wsrep_on                       = on
