--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ master:
     - NEW_CLUSTER=1
     - CLUSTER_NAME=local-test
     - CLUSTER=master
+  volumes:
+   - ./server.cnf:/etc/my.cnf.d/server.cnf
+   - ./master:/var/lib/mysql
 db2:
   image:
     eviles/mariadb-galera
@@ -15,6 +18,9 @@ db2:
   environment:
     - CLUSTER_NAME=local-test
     - CLUSTER=master
+  volumes:
+    - ./server.cnf:/etc/my.cnf.d/server.cnf
+    - ./db2:/var/lib/mysql
   links:
     - master
 db3:
@@ -25,5 +31,8 @@ db3:
   environment:
     - CLUSTER_NAME=local-test
     - CLUSTER=master
+  volumes:
+    - ./server.cnf:/etc/my.cnf.d/server.cnf
+    - ./db3:/var/lib/mysql
   links:
     - master
