--- a/mariadb-galera/docker-compose.yml
+++ b/mariadb-galera/docker-compose.yml
@@ -7,9 +7,10 @@ master:
     - NEW_CLUSTER=1
     - CLUSTER_NAME=local-test
     - CLUSTER=master
+  volumes_from:
+   - master-volume:rw
   volumes:
    - ./server.cnf:/etc/my.cnf.d/server.cnf
-   - ./master:/var/lib/mysql
 db2:
   image:
     eviles/mariadb-galera
@@ -18,9 +19,10 @@ db2:
   environment:
     - CLUSTER_NAME=local-test
     - CLUSTER=master
+  volumes_from:
+   - db2-volume:rw
   volumes:
     - ./server.cnf:/etc/my.cnf.d/server.cnf
-    - ./db2:/var/lib/mysql
   links:
     - master
 db3:
@@ -31,8 +33,18 @@ db3:
   environment:
     - CLUSTER_NAME=local-test
     - CLUSTER=master
+  volumes_from:
+   - db3-volume:rw
   volumes:
     - ./server.cnf:/etc/my.cnf.d/server.cnf
-    - ./db3:/var/lib/mysql
   links:
     - master
+master-volume:
+  image:
+    eviles/mysql-volume
+db2-volume:
+  image:
+    eviles/mysql-volume
+db3-volume:
+  image:
+    eviles/mysql-volume
