--- a/tomcat8-dev/Dockerfile
+++ b/tomcat8-dev/Dockerfile
@@ -6,7 +6,7 @@ ADD mysql-connector-java-5.1.38.jar /usr/local/java/jre/lib/ext/mysql-connector-
 ADD mysql-connector-java-5.1.38.jar /usr/local/tomcat/lib/mysql-connector-java-5.1.38.jar
 
 RUN yum -y groupinstall 'Development Tools' \
-&& yum -y install net-tools libstdc++ libstdc++.i686 libcurl libcurl.i686 \
+&& yum -y install wget less net-tools libstdc++ libstdc++.i686 libcurl libcurl.i686 \
 && yum clean all \
 && rm -rf /var/cache/yum/* \
 && localedef -i zh_TW -c -f UTF-8 zh_TW.UTF-8
