--- a/httpd-tomcat-mariadb-dev/Dockerfile
+++ b/httpd-tomcat-mariadb-dev/Dockerfile
@@ -11,6 +11,7 @@ RUN echo "[dockerrepo]" > /etc/yum.repos.d/docker.repo \
 && echo "enabled=1" >> /etc/yum.repos.d/docker.repo \
 && echo "gpgcheck=1" >> /etc/yum.repos.d/docker.repo \
 && echo "gpgkey=https://yum.dockerproject.org/gpg" >> /etc/yum.repos.d/docker.repo \
+&& yum -y install epel-release \
 && yum -y groupinstall 'Development Tools' \
 && yum -y install rsync less wget net-tools libstdc++ libstdc++.i686 libcurl libcurl.i686 docker-engine \
 && yum clean all \
