--- a/httpd-dev/Dockerfile
+++ b/httpd-dev/Dockerfile
@@ -1,6 +1,7 @@
 FROM eviles/httpd
 
-RUN yum -y groupinstall 'Development Tools' \
+RUN yum -y install epel-release \
+&& yum -y groupinstall 'Development Tools' \
 && yum -y install wget less net-tools libstdc++ libstdc++.i686 libcurl libcurl.i686 \
 && yum clean all \
 && rm -rf /var/cache/yum/* \
