--- a/httpd-tomcat-mariadb-dev/Dockerfile
+++ b/httpd-tomcat-mariadb-dev/Dockerfile
@@ -27,9 +27,9 @@ RUN echo "[dockerrepo]" > /etc/yum.repos.d/docker.repo \
 && make install \
 && rm -rf /usr/local/src/yaz-${YAZ_VERSION} \
 && echo "[program:atd]" >> /etc/supervisord.conf \
-&& echo "command=/usr/sbin/atd" >> /etc/supervisord.conf \
+&& echo "command=/usr/sbin/atd -d" >> /etc/supervisord.conf \
 && echo "[program:crond]" >> /etc/supervisord.conf \
-&& echo "command=/usr/sbin/crond" >> /etc/supervisord.conf \
+&& echo "command=/usr/sbin/crond -n" >> /etc/supervisord.conf \
 && localedef -i zh_TW -c -f UTF-8 zh_TW.UTF-8
 
 ENV LC_ALL=zh_TW.UTF-8
