--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,6 +1,6 @@
 FROM eviles/oracle-jdk8
 
-ARG JENKINS_VERSION=2.13
+ARG JENKINS_VERSION=2.14
 ARG JENKINS_USER=jenkins
 ARG JENKINS_GROUP=jenkins
 ARG JENKINS_UID=1000
@@ -11,7 +11,7 @@ ENV JENKINS_SLAVE_AGENT_PORT=50000
 
 RUN /usr/sbin/groupadd --gid $JENKINS_GID $JENKINS_GROUP \
 && /usr/sbin/useradd --uid $JENKINS_UID --gid $JENKINS_GID --create-home --shell /bin/bash $JENKINS_USER \
-&& yum install -y wget git unzip zip bzip2 \
+&& yum install -y wget git git-svn unzip zip bzip2 \
 && yum clean all \
 && rm -rf /var/cache/yum/* \
 && mkdir -p /usr/share/jenkins \
