--- a/alpine-nginx/Dockerfile
+++ b/alpine-nginx/Dockerfile
@@ -3,8 +3,6 @@ FROM eviles/alpine-sshd
 RUN apk --update add certbot nginx \
 && rm -rf /var/cache/apk/* \
 && echo "[program:nginx]" >> /etc/supervisord.conf \
-&& echo "command=/usr/sbin/nginx -g \"daemon off;\"" >> /etc/supervisord.conf \
-# Fix nginx error on startup...
-&& mkdir /run/nginx
+&& echo "command=/run_nginx.sh" >> /etc/supervisord.conf
 
 EXPOSE 80 443
