--- a/alpine-nginx/Dockerfile
+++ b/alpine-nginx/Dockerfile
@@ -5,4 +5,7 @@ RUN apk --update add certbot nginx \
 && echo "[program:nginx]" >> /etc/supervisord.conf \
 && echo "command=/run_nginx.sh" >> /etc/supervisord.conf
 
+ADD run_nginx.sh /run_nginx.sh
+RUN chmod 755 /run_nginx.sh
+
 EXPOSE 80 443
