--- a/alpine-nginx/default.conf
+++ b/alpine-nginx/default.conf
@@ -1,4 +1,8 @@
+proxy_set_header X-Real-IP $remote_addr;
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
 server {
+        listen 80;
         listen 443 http2 ssl;
 
         server_name example.com;
