--- a/alpine-nginx/ssl.conf.template
+++ b/alpine-nginx/ssl.conf.template
@@ -3,9 +3,15 @@ proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
 server {
         listen 80;
+        listen [::]:80;
         listen 443 http2 ssl;
+        listen [::]:443 http2 ssl;
 
         server_name example.com;
+        
+        if ($scheme = http) {
+                return 301 https://$http_host$request_uri;
+        }
 
         ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
