--- a/alpine-nginx/Dockerfile
+++ b/alpine-nginx/Dockerfile
@@ -1,6 +1,7 @@
 FROM eviles/alpine-sshd
 
-RUN apk --update add certbot openssl nginx \
+RUN apk --update add gcc python-dev musl-dev libffi-dev openssl-dev openssl nginx \
+&& pip install certbot \
 && rm -rf /var/cache/apk/* \
 && echo "[program:nginx]" >> /etc/supervisord.conf \
 && echo "command=/run_nginx.sh" >> /etc/supervisord.conf \
