--- a/alpine-sshd/Dockerfile
+++ b/alpine-sshd/Dockerfile
@@ -25,7 +25,7 @@ RUN apk --update add python py-pip nss-pam-ldapd openssh at bash wget curl tar \
 && echo "[rpcinterface:supervisor]" >> /etc/supervisord.conf \
 && echo "supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface" >> /etc/supervisord.conf \
 && echo "[program:sshd]" >> /etc/supervisord.conf \
-&& echo "command=/usr/sbin/sshd -D" >> /etc/supervisord.conf
+&& echo "command=/usr/sbin/sshd -D" >> /etc/supervisord.conf \
 && echo "[program:atd]" >> /etc/supervisord.conf \
 && echo "command=/usr/sbin/atd -d" >> /etc/supervisord.conf \
 && echo "[program:crond]" >> /etc/supervisord.conf \
