--- a/alpine-oracle-jdk8/Dockerfile
+++ b/alpine-oracle-jdk8/Dockerfile
@@ -9,7 +9,10 @@ ENV JAVA_HOME=/usr/local/java
 ENV CLASSPATH=./:$JAVA_HOME/lib:$JAVA_HOME/jre/lib/ext
 ENV PATH=$PATH:$JAVA_HOME/bin:$JAVA_HOME/jre/bin
 
-RUN curl -s -L --header "Cookie: oraclelicense=accept-securebackup-cookie;" --url "http://download.oracle.com/otn-pub/java/jdk/${JAVA_MAJOR_VERSION}u${JAVA_UPDATE_VERSION}-b${JAVA_BUILD_NUMER}/${JAVA_SID}/jdk-${JAVA_MAJOR_VERSION}u${JAVA_UPDATE_VERSION}-linux-x64.tar.gz" | tar xz -C /usr/local \
+RUN apk --update add --no-cache --virtual=.build-dependencies curl \ 
+&& curl -s -L --header "Cookie: oraclelicense=accept-securebackup-cookie;" --url "http://download.oracle.com/otn-pub/java/jdk/${JAVA_MAJOR_VERSION}u${JAVA_UPDATE_VERSION}-b${JAVA_BUILD_NUMER}/${JAVA_SID}/jdk-${JAVA_MAJOR_VERSION}u${JAVA_UPDATE_VERSION}-linux-x64.tar.gz" | tar xz -C /usr/local \
+&& apk del .build-dependencies \
+&& rm -rf /var/cache/apk/* \
 && ln -s /usr/local/jdk1.${JAVA_MAJOR_VERSION}.0_${JAVA_UPDATE_VERSION} /usr/local/java \
 && echo "JAVA_HOME=$JAVA_HOME" >> /etc/profile \
 && echo "CLASSPATH=./:\$JAVA_HOME/lib:\$JAVA_HOME/jre/lib/ext" >> /etc/profile \
