--- a/alpine-ghost/Dockerfile
+++ b/alpine-ghost/Dockerfile
@@ -7,7 +7,7 @@ ENV GHOST_CONTENT=/usr/src/ghost/content
 WORKDIR $GHOST_DIR
 
 RUN apk --update add nodejs \
-&& wget -O ghost.zip "https://github.com/TryGhost/Ghost/releases/download/${GHOST_VERSION}/Ghost-${GHOST_VERSION}.zip" \
+&& curl -L "https://github.com/TryGhost/Ghost/releases/download/${GHOST_VERSION}/Ghost-${GHOST_VERSION}.zip" -o ghost.zip\
 && unzip ghost.zip \
 && npm install --production \
 && rm ghost.zip \
