--- a/alpine-ghost/Dockerfile
+++ b/alpine-ghost/Dockerfile
@@ -6,10 +6,12 @@ ENV GHOST_CONTENT=/usr/src/ghost/content
 
 WORKDIR $GHOST_DIR
 
-RUN apk --update add nodejs nodejs-npm \
-&& curl -L "https://github.com/TryGhost/Ghost/releases/download/${GHOST_VERSION}/Ghost-${GHOST_VERSION}.zip" -o ghost.zip\
+RUN apk --update add nodejs nodejs-npm make \
+&& curl -L "https://github.com/TryGhost/Ghost/releases/download/${GHOST_VERSION}/Ghost-${GHOST_VERSION}.zip" -o ghost.zip \
 && unzip ghost.zip \
+&& npm install --unsafe-perm -g knex-migrator \
 && npm install --production \
+&& knex-migrator init \
 && rm ghost.zip \
 && rm -rf /var/cache/apk/* \
 && echo "[program:ghost]" >> /etc/supervisord.conf \
