--- a/httpd/Dockerfile
+++ b/httpd/Dockerfile
@@ -5,6 +5,7 @@ RUN yum -y install httpd \
 && rm -rf /var/cache/yum/* \
 && sed -i '/^#ServerName/cServerName localhost' /etc/httpd/conf/httpd.conf \
 && sed -i 's/DirectoryIndex index.html/DirectoryIndex index.html index.htm/g' /etc/httpd/conf/httpd.conf \
+&& sed -i 's/^EnableSendfile on/EnableSendfile off/g' /etc/httpd/conf/httpd.conf \
 && echo "[program:httpd]" >> /etc/supervisord.conf \
 && echo "command=/usr/sbin/httpd -D FOREGROUND" >> /etc/supervisord.conf
 
